--- a/Task03/Website/index.html
+++ b/Task03/Website/index.html
@@ -31,7 +31,7 @@
 
         </div>
 
-        <script src="assets/js/scripts.js"></script>
+        <script src="assets/js/StudentScripts.js"></script>
 
     </body>
 </html>
