student course enrolment  feature is fully completed

--- a/Task03/Website/student.html
+++ b/Task03/Website/student.html
@@ -125,7 +125,7 @@
             <th style="width: 15%;">Course Code</th>
             <th style="width: 20%;">Course Name</th>
             <th style="width: 13%;">Lab Name</th>
-            <th style="width: 12%;">Lab Code</th>
+            <th style="width: 12%;">Laboratory code</th>
             <th style="width: 15%;">Date</th>
             <th style="width: 15%;">Time</th>
             <th style="width: 10%;">Status</th>
